--- a/app/myProfile/testCenterDetails/view.html
+++ b/app/myProfile/testCenterDetails/view.html
@@ -193,7 +193,8 @@
                     <span><i class="fa fa-trash"></i></span>
                   </div>
                 </div>
-
+          <div class="col-md-12 bordered">
+                  </div>
                 <!-- Ads toggle -->
                 <div class="col-md-12" ng-show="$ctrl.productShow[item.id]" ng-init="$ctrl.adsShow[item.id]=0;$ctrl.adsToggleIconClass[item.id]='fa-plus';">
                   <div class="col-md-4">
@@ -294,10 +295,10 @@
                   <p class="font-normal"><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></p>
                 </div>
                 <div class="col-md-4">
-                  <p class="font-normal" style="left:72%;"><a href="javascript:void(0)">Go to cart</a></p>
+                  <p class="font-normal" style="left:72%;"><a href="javascript:void(0)">Add another test center</a></p>
                 </div>
                 <div class="col-md-4">
-                  <p class=""><a href="javascript:void(0)" class="ng-scope">Next</a></p>
+                  <p class=""><a href="javascript:void(0)" class="ng-scope">Delete</a></p>
                 </div>
               </div>
 
