updated myprofile addtestcenter steps

--- a/app/myProfile/addTestCenter/sponsoredPage/view.html
+++ b/app/myProfile/addTestCenter/sponsoredPage/view.html
@@ -32,8 +32,9 @@
           </div>
         </div>
         <!-- Search By State Section -->
-        <sponsor-state-select></sponsor-state-select>
-        <cart-detail> </cart-detail>
+        <!-- <sponsor-state-select></sponsor-state-select> -->
+        <myprofile-sponsor-state-select></myprofile-sponsor-state-select>
+        <myprofile-cart-detail> </myprofile-cart-detail>
         <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
           <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
             <input id="previous" class="btn modal_btn btn_size pull-left" value="Back" type="button" ng-click="$ctrl.previous()">
