updated delete sponsor layout items, upgrade downgrade system,

--- a/app/myProfile/addTestCenter/optionalFields/view.html
+++ b/app/myProfile/addTestCenter/optionalFields/view.html
@@ -91,6 +91,10 @@
       </div>
       <ul class="stick-next-uo list-inline">
         <li>
+          <p ><a href="javascript:void(0)" ng-click="$ctrl.goHome();">Home</a></p>
+
+        </li>
+        <li>
           <p><a href="javascript:void(0);" ng-click="$ctrl.goBack()">Back</a></p>
         </li>
         <li>
