--- a/app/signUp/productDetails/view.html
+++ b/app/signUp/productDetails/view.html
@@ -54,7 +54,7 @@
               <span>Total</span>
             </div>
             <div class="col-md-2">
-              <span>10$</span>
+              <span></span>
             </div>
             <div class="col-md-1">
               <span style="cursor:pointer;" ng-click="$ctrl.editCenter(item.id, item.name,item);"><i class="fa fa-pencil" aria-hidden="true"></i></span>
