--- a/app/myProfile/addTestCenter/productDetails/view.html
+++ b/app/myProfile/addTestCenter/productDetails/view.html
@@ -277,7 +277,7 @@
     </div>
 
     <div class="col-md-12">
-      <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
+    <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goHome();">Home</a></p>  <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.testCenter()">Add Test center</a></p>
       <p class="stick-next-left font-normal " style="margin-left:20%;"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish Ads</a></p>
       <p class="stick-next-left font-normal back-button"><a href="javascript:;" ng-click="$ctrl.goBack();">Back</a></p>
       <!-- <p class="stick-next-left"><a href="javascript:void(0)" ng-click="$ctrl.viewProfile()">View my profile</a></p> -->
