--- a/app/myProfile/addTestCenter/sponserPage/view.html
+++ b/app/myProfile/addTestCenter/sponserPage/view.html
@@ -36,6 +36,8 @@
         <p class="lead"  ng-if="$ctrl.bannerAdded!=='1'"><a href="javascript:void(0)" ng-click="$ctrl.publish_ads()">Publish my Ads</a></p>
       </div>
     </div>
+
+    <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goHome();">Home</a></p>
     <p class="stick-next-left font-normal"><a href="javascript:;" ng-click="$ctrl.goBack()">Back</a></p>
     <p class="stick-next-left font-normal" style="left:72%;"><a href="javascript:void(0)" ng-click="$ctrl.goToCart()">Go to cart</a></p>
     <p class="stick-next-right"><a href="javascript:void(0)" ng-if="$ctrl.sponsorAdded!=='1' " ng-click="$ctrl.add_sponsor()">Next</a></p>
