--- a/app/myProfile/addTestCenter/view.html
+++ b/app/myProfile/addTestCenter/view.html
@@ -103,6 +103,7 @@
       </div>
     </div>
     <div class="col-md-12 " style="margin-top:50px;">
+      <p class="stick-next-left font-normal"><a href="javascript:void(0)" ng-click="$ctrl.goHome();">Home</a></p>
       <p class="stick-next-left font-normal"><a href="javascript:void(0)" ng-show="$ctrl.skipShow" ng-click="$ctrl.skip();">Skip</a></p>
       <p class="stick-next-right"><a href="javascript:void(0);" ng-click="$ctrl.addCenter()" ng-disabled="$ctrl.centerForm.centerName.$invalid || ($ctrl.categoryModel.length===0) || $ctrl.centerForm.website.$invalid || $ctrl.centerForm.email.$invalid || $ctrl.centerForm.phone.$invalid || $ctrl.centerForm.address.$invalid">Next</a></p>
     </div>
