--- a/app/myProfile/view.html
+++ b/app/myProfile/view.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <!-- Left Section  -->
-    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
+    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" ng-show="$root.addCenterInitialize!==1">
       <profile-nav-section profile-pic="$ctrl.profile.profile_pic"></profile-nav-section>
       <div class="banner_adjust">
         <a id="sidebar_ad_url">
